--- a/pom.xml
+++ b/pom.xml
@@ -15,36 +15,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.release>17</maven.compiler.release>
-		<junit.version>5.11.0</junit.version>
+
 		<jackson.core.ver>2.18.2</jackson.core.ver>
 		<lombok.vers>1.18.36</lombok.vers>
 		<aspectj.version>1.9.22.1</aspectj.version>
 	</properties>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.junit</groupId>
-				<artifactId>junit-bom</artifactId>
-				<version>${junit.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<!-- Optionally: parameterized tests support -->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<scope>test</scope>
-		</dependency>
+
 
 		<!--
 		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
@@ -116,6 +94,11 @@
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.13.0</version>
+<!--					<configuration>-->
+<!--						<includes>-->
+<!--							<include>**/tests/*.java</include>-->
+<!--						</includes>-->
+<!--						</configuration>-->
 				</plugin>
 <!--				<plugin>-->
 <!--					<groupId>org.apache.maven.plugins</groupId>-->
@@ -141,14 +124,19 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.5.2</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.testng</groupId>
+							<artifactId>testng</artifactId>
+							<version>7.10.2</version>
+						</dependency>
+					</dependencies>
 					<configuration>
-						<includes>
-							<include>**/tests/*.java</include>
-						</includes>
 						<parallel>methods</parallel>
-						<threadCount>10</threadCount>
+						<threadCount>5</threadCount>
 					</configuration>
 				</plugin>
+
 			</plugins>
 		</pluginManagement>
 	</build>
